# Mikhail_Muravyov_attestation

./: .env.sample  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
retail_network/: admin.py  apps.py  permissions.py  serializers.py  urls.py  views.py
retail_network/models/: __init__.py  products.py  supliers.py
